--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <nav><a href="index.html">Turth Teller</a></nav>
 <nav><a href="offer.html">Special Offer</a></nav>
 
-<p>Truth Teller presented here --- modified</p>
+<p>Truth Teller presented here --- modified third time</p>
 
 
 <!-- this script links to bootstrap js- and must be placed before own custom js file-->
