--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- decide if duplicating navigation on every page is desired -->
 <nav><a href="index.html">Turth Teller</a></nav>
 <nav><a href="offer.html">Special Offer</a></nav>
-
+<h2>Needs an h2 for event load</h2>
 <p>Truth Teller presented here --- modified third time</p>
 
 
