nav index and test hero

--- a/working-notes/boilerplate starter.html
+++ b/working-notes/boilerplate starter.html
@@ -10,7 +10,7 @@
 	<!-- this is my ciustom css link -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<!-- begin set meta data from sublime text starter shell- typing in html+tab then select html (file needs to be saved in order to be functional) ->
+	<!-- begin set meta data from sublime text starter shell- typing in html+tab then select html (file needs to be saved in order to be functional) -->
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"-->
