--- a/test-hero-animated.html
+++ b/test-hero-animated.html
@@ -63,9 +63,9 @@
                 <div class="container">
                     <div class="header-content">
                         <div class="line"></div>
-                        <h2>Reinvent Business Experience with</h2>
-                        <h1>Our Global and Integrated Solutions</h1>
-                        <h4>We help entrepreneurs, start-ups and enterprises shape their ideas into business</h4>
+                        <h2>Discover Truest Choices.</h2>
+                        <h1>Reveal the truth.</h1>
+                        <h4>The Key to true answers instantly at your fingertips.</h4>
                     </div>
                 </div>
              </div>
@@ -76,9 +76,9 @@
                 <div class="container">
                     <div class="header-content">
                         <div class="line animated bounceInLeft"></div>
-                        <h2>Reinvent Digital Experience with</h2>
-                        <h1>Our Digital and Intelligent Solutions</h1>
-                        <h4>We help entrepreneurs, start-ups and enterprises shape their dreams into profits</h4>
+                        <h2>Find Your True Purpose.</h2>
+                        <h1>Achieve true greatness.</h1>
+                        <h4>Develop automatic confidence when you know you own truth.</h4>
                     </div>
                 </div>
              </div>
@@ -89,9 +89,9 @@
                 <div class="container">
                     <div class="header-content">
                         <div class="line animated bounceInLeft"></div>
-                        <h2>Reinvent Client Experience with</h2>
-                        <h1>Our CRM and Software Solutions</h1>
-                        <h4>We help entrepreneurs, start-ups and enterprises shape their leads into clients</h4>
+                        <h2>The Real Truth Teller</h2>
+                        <h1>Gain true insight into your future.</h1>
+                        <h4>Expand your Universe with truth on your side.</h4>
                     </div>
                 </div>
              </div>
