--- a/test-hero-animated.html
+++ b/test-hero-animated.html
@@ -63,9 +63,9 @@
                 <div class="container">
                     <div class="header-content">
                         <div class="line"></div>
-                        <h2>Discover Truest Choices.</h2>
-                        <h1>Reveal the truth.</h1>
-                        <h4>The Key to true answers instantly at your fingertips.</h4>
+                        <h2>Discover Your True Choices</h2>
+                        <h1>Reveal the truth</h1>
+                        <h4>The Key to true answers instantly at your fingertips</h4>
                     </div>
                 </div>
              </div>
@@ -76,9 +76,9 @@
                 <div class="container">
                     <div class="header-content">
                         <div class="line animated bounceInLeft"></div>
-                        <h2>Find Your True Purpose.</h2>
-                        <h1>Achieve true greatness.</h1>
-                        <h4>Develop automatic confidence when you know you own truth.</h4>
+                        <h2>Find Your True Purpose</h2>
+                        <h1>Achieve true greatness</h1>
+                        <h4>Develop automatic confidence when you know you own truth</h4>
                     </div>
                 </div>
              </div>
@@ -89,8 +89,8 @@
                 <div class="container">
                     <div class="header-content">
                         <div class="line animated bounceInLeft"></div>
-                        <h2>The Real Truth Teller</h2>
-                        <h1>Gain true insight into your future.</h1>
+                        <h2>Read Your True Future</h2>
+                        <h1>Gain true insight</h1>
                         <h4>Expand your Universe with truth on your side.</h4>
                     </div>
                 </div>
