--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	 <!-- additinal Bootstrap CSS  for navigation - top header-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+
+
   <!-- additional css and scripts for carousel (place scriot on top so carousel loads immediately -->
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -39,7 +41,7 @@
 <!-- MASTER PROJECT REFERENCE -->	
 <!-- class project via bootsrap versus ealier version like Rover -->
 	
-	<title>TRUTH TELLER</title>
+	<title>TRUTH TELLER v.1</title>
 </head>
 
 
@@ -111,7 +113,9 @@
 
 <!-- Hero Animated Carousel-->
 <!-- will only function when in live mode -->
-
+<div class="container">
+  <div class="row">
+    <div class="col">
     <div class="owl-carousel owl-theme">
         <div class="item">
             <img src="https://cdn.pixabay.com/photo/2015/05/31/10/51/technology-791029_960_720.jpg" alt="">
@@ -153,8 +157,9 @@
              </div>
         </div>
     </div>
-
-
+</div>
+</div>
+</div>
 
 
 
