--- a/working-notes/boilerplate starter.html
+++ b/working-notes/boilerplate starter.html
@@ -3,6 +3,14 @@
 <head>
 <!-- boilerplate starter template for this website loacted in working-notes folder under same project (ideal to create initial new pages.... afterwards use a customized template for actual website with proper navigation, footer, etc established)-->
 
+<!-- begin set meta data from sublime text starter shell- typing in html+tab then select html (file needs to be saved in order to be functional) -->
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- include custom meta data (seo/robots)-->
+
+<!-- CSS -->
 	<!-- this link to bootstrap css - and must be placed before own custom css file as per https://getbootstrap.com/docs/5.0/getting-started/introduction/-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<!-- this is link to normalize.css will makesbrowsers render all elements more consistently as explained here: https://necolas.github.io/normalize.css/ (this is external code) -->
@@ -10,12 +18,7 @@
 	<!-- this is my ciustom css link -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<!-- begin set meta data from sublime text starter shell- typing in html+tab then select html (file needs to be saved in order to be functional) -->
-
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"-->
-
-	<!-- include custom meta data (seo/robots)-->
+	
 
 
 <!-- class project via bootsrap versus ealier version like Rover -->	
