2 sections and hero message

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- MASTER PROJECT REFERENCE -->	
 <!-- class project via bootsrap versus ealier version like Rover -->
 	
-	<title>TRUTH TELLER v.1</title>
+	<title>TRUTH TELLER v.3</title>
 </head>
 
 
@@ -53,7 +53,7 @@
 
 
 <!--TOP HEADER -->
-
+<section>
 <!--     container top nav bar -->
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
@@ -109,15 +109,18 @@
     
     
   </div>
+
+ </section>
+  
 <!--     end nav link -->
 
 
 
 <!-- Hero Animated Carousel-->
 <!-- will only function when in live mode -->
-<div class="container">
-  <div class="row">
-    <div class="col">
+<section>
+  <P class="heroHeading"> Presenting The Truth Teller - All the Anwsers Right at your Fingertips </p>
+  <div class="container">
     <div class="owl-carousel owl-theme">
         <div class="item">
             <img src="https://cdn.pixabay.com/photo/2015/05/31/10/51/technology-791029_960_720.jpg" alt="">
@@ -161,8 +164,7 @@
     </div>
 </div>
 </div>
-</div>
-
+</section>
 
 
 
