--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
+
+  <!-- these scriptys are for hero animated carpousel-->
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
+  <script src="//cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script> 
  
 
 
@@ -43,7 +48,7 @@
 <!-- MASTER PROJECT REFERENCE -->	
 <!-- class project via bootsrap versus ealier version like Rover -->
 	
-	<title>TRUTH TELLER v.4</title>
+	<title>v.5 TRUTH TELLER</title>
 </head>
 
 
@@ -119,7 +124,7 @@
 <!-- Hero Animated Carousel-->
 <!-- will only function when in live mode -->
 <section>
-  <P class="heroHeading"> Presenting The Truth Teller - All the Anwsers Right at your Fingertips </p>
+  <P class="heroHeading"> Presenting The Real Truth Teller - All the Anwsers Right at your Fingertips </p>
   <div class="container">
     <div class="owl-carousel owl-theme">
         <div class="item">
@@ -179,10 +184,7 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<!-- these scriptys are for hero animated carpousel-->
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
-  <script src="//cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script> 
+
 
 <!-- this is for any additional custom script -->
 <script src="js/script.js"></script>
