--- a/test-hero-animated.html
+++ b/test-hero-animated.html
@@ -29,7 +29,7 @@
 	<!-- begin set meta data from sublime text starter shell- typing in html+tab then select html (file needs to be saved in order to be functional) -->
 
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- include custom meta data (seo/robots)-->
 
