--- a/test-hero-animated.html
+++ b/test-hero-animated.html
@@ -53,7 +53,7 @@
   Bootstrap docs: https://getbootstrap.com/docs
 -->
 
-
+<section>
 
 <header>
     <div class="owl-carousel owl-theme">
@@ -99,6 +99,7 @@
     </div>
 </header>
 
+</section>
 
 <!-- CSS animated hero place here rirst to test -->
 
