--- a/test-hero-animated.html
+++ b/test-hero-animated.html
@@ -63,7 +63,7 @@
                 <div class="container">
                     <div class="header-content">
                         <div class="line"></div>
-                        <h2>Discover Your True Choices</h2>
+                        <h2>Discover Your True Choices.</h2>
                         <h1>Reveal the truth</h1>
                         <h4>The Key to true answers instantly at your fingertips</h4>
                     </div>
@@ -100,8 +100,6 @@
 </header>
 
 </section>
-
-<!-- CSS animated hero place here rirst to test -->
 
 
 
