--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 <!-- class project via bootsrap versus ealier version like Rover -->  
-  <title>v!. Include a Title</title>
+  <title>v9. Include a Title</title>
 </head>
 
 
