--- a/index-A.html
+++ b/index-A.html
@@ -126,7 +126,7 @@
 <!-- Hero Animated Carousel-->
 <!-- will only function when in live mode -->
 <section>
-  <P class="heroHeading"> Presenting The Real Truth Teller - All the Anwsers Right at your Fingertips </p>
+  <p class="heroHeading"> Presenting The Real Truth Teller - All the Anwsers Right at your Fingertips </p>
   <header>  
   <div class="container">
     <div class="owl-carousel owl-theme">
