--- a/working-notes/index-carousle working-v9.html
+++ b/working-notes/index-carousle working-v9.html
@@ -11,15 +11,6 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
 
-    <!-- begin set meta data from sublime text starter shell- typing in html+tab then select html (file needs to be saved in order to be functional) -->
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- include custom meta data (seo/robots)-->
-
-
-
 
 
 
@@ -35,10 +26,16 @@
 
 
 
+  <!-- begin set meta data from sublime text starter shell- typing in html+tab then select html (file needs to be saved in order to be functional) -->
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- include custom meta data (seo/robots)-->
 
 
 <!-- class project via bootsrap versus ealier version like Rover -->  
-  <title>v9. Truth Teller Anwsers All Your Questions... Truthfully</title>
+  <title>v9. Include a Title</title>
 </head>
 
 
@@ -108,7 +105,7 @@
 <!-- decide if duplicating navigation on every page is desired -->
 <!-- basic code is: <nav><a href="index.html">Text</a></nav> -->
 
-<p class="heroHeading"> Presenting The Real Truth Teller - All the Anwsers Right at your Fingertips </p>
+<p>my content here A</p>
 
 
 <!-- 
