--- a/index-A.html
+++ b/index-A.html
@@ -54,7 +54,6 @@
 </head>
 
 
-<body>
 <!-- start my content --- REMOVE BELOW BODY STYLE IF LATER DOES NOT WORK WELL VISUALLY  (keep bopth now) -->	
  <body style="background: goldenrod;">
 
@@ -126,7 +125,7 @@
 <!-- Hero Animated Carousel-->
 <!-- will only function when in live mode -->
 <section>
-  <p class="heroHeading"> Presenting The Real Truth Teller - All the Anwsers Right at your Fingertips </p>
+  <P class="heroHeading"> Presenting The Real Truth Teller - All the Anwsers Right at your Fingertips </p>
   <header>  
   <div class="container">
     <div class="owl-carousel owl-theme">
