--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
 
 
 
-
-
-
-
+ <!-- additional css and scripts for carousel (place scriot on top so carousel loads immediately -->
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -43,7 +40,11 @@
 
 
 <body>
-<!-- start muy content -->  
+<!-- start my content -->  
+
+<!--NAVIGATION-->
+<!-- decide if duplicating navigation on every page is desired -->
+<!-- basic code is: <nav><a href="index.html">Text</a></nav> -->
 
 <section>
 <!--     container top nav bar -->
@@ -87,7 +88,6 @@
       </li>
     </ul>
     
-  
     
     <!--     right sided navigation  (later implement with different styling) -->
     <ul class="navbar-nav ml-auto">
@@ -104,16 +104,14 @@
 
  </section>
 
-<!--NAVIGATION-->
-<!-- decide if duplicating navigation on every page is desired -->
-<!-- basic code is: <nav><a href="index.html">Text</a></nav> -->
+
+<!-- hero alert -->
 
 <p class="heroHeading"> Presenting The Real Truth Teller - All the Anwsers Right at your Fingertips </p>
 
 
-<!-- 
-  Bootstrap docs: https://getbootstrap.com/docs
--->
+<!-- Hero Animated Carousel-->
+<!-- will only function when in live mode -->
 
 <section>
 
@@ -162,6 +160,8 @@
 </header>
 
 </section>
+
+
 
 
 
