--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
 <!-- Hero Animated Carousel-->
 <!-- will only function when in live mode -->
+<!--hero code courtesy of https://web-eau.net/en/blog/examples-header-bootstrap  #9 -->
 
 <section>
 
@@ -160,6 +161,7 @@
 </header>
 
 </section>
+
 
 
 
