--- a/test.html
+++ b/test.html
@@ -11,16 +11,74 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- this link to bootstrap css - and must be placed before own custom css file as per https://getbootstrap.com/docs/5.0/getting-started/introduction/-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- this is link to normalize.css will makesbrowsers render all elements more consistently as explained here: https://necolas.github.io/normalize.css/ (this is external code) -->
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+
 
 <!-- above shrink-to-fit=no is specifc for Safari ... will not use irt myself-->
 
-
+<!-- this is my custom css link -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
 <!-- EXPLANATORY CONTAINER -->
 
 <!--hero code courtesy of https://web-eau.net/en/blog/examples-header-bootstrap  #9 -->
 
 
+
+    <hr>
+    <div class="container">
+        <div class="row">
+            <h2 class="toptopic">How does it work</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
+        </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-12">
+          <h2 class="topic">What is it</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+           <h2 class="topic">When can I use it</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, mollitia natus amet eligendi consequuntur. Veritatis ullam debitis voluptas repellat laboriosam.</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+           <h2 class="topic">Where is it best</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, error, itaque non vel architecto ratione obcaecati doloribus delectus illum harum?</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+          <h2 class="topic">Why should you care</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, nam voluptate accusantium nulla distinctio odit aliquam voluptatem ab. Earum.</p>
+         </div>
+          <div class="row">
+            <h2 class="toptopic">Get Yours Now</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
+    
+        </div>
+      </div>
+    </div>
+    <hr>
+
+
+
+
+<section>
+<div class="container explnation">
+  <div class="row">
+    <div class="col">type here</div>
+  </div>
+  <div class expl="row">
+    <div class="col-4">text</div>
+    <div class="col-4">text</div>
+    <div class="col-4">text</div>
+    <div class="col-4">text</div>
+  </div>
+  <div class="row">
+    <div class="col">text</div>
+  </div>
+</div>   
+</section>  
 
     
 
