--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="container">
                     <div class="header-content">
                         <div class="line"></div>
-                        <h2>Discover Your True Choices.</h2>
+                        <h2>Discover Your True Choices</h2>
                         <h1>Reveal the truth</h1>
                         <h4>The Key to true answers instantly at your fingertips</h4>
                     </div>
@@ -168,12 +168,12 @@
     <hr>
     <div class="container">
         <div class="row">
-            <h2 class="toptopic">How does it work</h2>
+            <h2 class="toptopic">What is it</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-12">
-          <h2 class="topic">What is it</h2>
+          <h2 class="topic">How does it work</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
