--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <!-- class project via bootsrap versus ealier version like Rover -->  
-  <title>v11. Truth Teller Anwsers All Your Questions... Truthfully</title>
+  <title>v12. Truth Teller Anwsers All Your Questions... Truthfully</title>
 </head>
 
 
@@ -71,20 +71,20 @@
 <!--     left sided navigation -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item px-1">
-        <a class="nav-link text-dark" href="#">WHAT</a>
+        <a class="nav-link text-dark" href="#what">WHAT</a>
       </li>
       <li class="nav-item px-1">
-        <a class="nav-link text-dark" href="#">HOW</a>
+        <a class="nav-link text-dark" href="#how">HOW</a>
       </li>
 
       <li class="nav-item px-1">
-        <a class="nav-link text-dark" href="#" >WHEN</a>
+        <a class="nav-link text-dark" href="#when" >WHEN</a>
       </li>
       <li class="nav-item px-1">
-        <a class="nav-link text-dark" href="#" >WHERE</a>
+        <a class="nav-link text-dark" href="#where" >WHERE</a>
       </li>   
       <li class="nav-item px-1">
-        <a class="nav-link text-dark" href="#" >WHY</a>
+        <a class="nav-link text-dark" href="#why" >WHY</a>
       </li>
     </ul>
     
@@ -92,10 +92,10 @@
     <!--     right sided navigation  (later implement with different inline styling) -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item  px-2">
-        <a class="nav-link text-dark" href="#">TEST</a>
+        <a class="nav-link text-dark" href="#test">TEST</a>
       </li>
       <li class="nav-item px-2">
-        <a class="nav-link text-dark" href="#">SPECIAL</a>
+        <a class="nav-link text-dark" href="#special">SPECIAL</a>
       </li>
     </ul>
     
@@ -152,7 +152,7 @@
                         <div class="line animated bounceInLeft"></div>
                         <h2>Read Your True Future</h2>
                         <h1>Gain true insight</h1>
-                        <h4>Expand your Universe with truth on your side.</h4>
+                        <h4>Expand your Universe with truth on your side</h4>
                     </div>
                 </div>
              </div>
@@ -168,24 +168,24 @@
     <hr>
     <div class="container">
         <div class="row">
-            <h2 class="toptopic">What is it</h2>
+            <h2 id="what" class="toptopic">What is it</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-12">
-          <h2 class="topic">How does it work</h2>
+          <h2 id="how" class="topic">How does it work</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-           <h2 class="topic">When can I use it</h2>
+           <h2 id="when" class="topic">When can I use it</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, mollitia natus amet eligendi consequuntur. Veritatis ullam debitis voluptas repellat laboriosam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-           <h2 class="topic">Where is it best</h2>
+           <h2 id="where"class="topic">Where is it best</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, error, itaque non vel architecto ratione obcaecati doloribus delectus illum harum?</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-          <h2 class="topic">Why should you care</h2>
+          <h2 id="why" class="topic">Why should you care</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, nam voluptate accusantium nulla distinctio odit aliquam voluptatem ab. Earum.</p>
          </div>
           <div class="row">
@@ -229,7 +229,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <h2 class="toptopic">Suceed in Tests</h2>
+            <h2 id="test"class="toptopic">Suceed in Tests</h2>
           <p>How would it feel to get the right answer every time.  Let me show you.  Type inb the name of a color (in english) and let me guess it accurately</p>
  <!-- jquery let me gues the color ... be more specifc-->
 
