--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, nam voluptate accusantium nulla distinctio odit aliquam voluptatem ab. Earum.</p>
          </div>
           <div class="row">
-            <h2 class="toptopic">Special Offer</h2>
+            <h2 id="special" class="toptopic">Special Offer</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
       </div>
@@ -229,7 +229,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <h2 id="test"class="toptopic">Suceed in Tests</h2>
+            <h2 id="test" class="toptopic">Suceed in Tests</h2>
           <p>How would it feel to get the right answer every time.  Let me show you.  Type inb the name of a color (in english) and let me guess it accurately</p>
  <!-- jquery let me gues the color ... be more specifc-->
 
@@ -259,7 +259,66 @@
     </div>
     <hr>
 
+  <!-- COMPLEX FOOTER CONTAINER 
+(started with flex box... adaptation refractoring courtesy of https://webdesign.tutsplus.com/tutorials/how-to-build-a-responsive-multi-level-sticky-footer-with-flexbox--cms-33341 -->  
 
+  <hr>
+    <div class="container"></div>
+    <footer>
+      <!-- main footer -->
+      <section class="ft-main">
+        <div class="ft-main-item">
+          <h2 class="ft-title">About</h2>
+          <ul>
+            <li><a href="#">Story</a></li>
+            <li><a href="#">Shipping</a></li>
+            <li><a href="#">Pricing</a></li>
+          </ul>
+        </div>
+        <div class="ft-main-item">
+          <h2 class="ft-title">Featured On</h2>
+          <ul>
+            <li><a href="#">Cosmopolitan</a></li>
+            <li><a href="#">Science Edu</a></li>
+          </ul>
+        </div>
+        <div class="ft-main-item">
+          <h2 class="ft-title">Contact</h2>
+          <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Direct</a></li>
+          </ul>
+        </div>
+         <div class="ft-main-item">
+          <h2 class="ft-title">Resources</h2>
+          <h4>Subscribe for further tips to get the truth anytime, anywhere</h4>
+          <form>
+            <input type="email" name="email" placeholder="Enter email address">
+            <input type="submit" value="Subscribe">
+          </form>
+        </div>
+      </section>
+    
+      <!-- Footer social -->
+      <section class="ft-social">
+        <ul class="ft-social-list">
+          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+        </ul>
+      </section>
+    
+      <!-- Footer legal -->
+      <section class="ft-legal">
+        <ul class="ft-legal-list">
+          <li><a href="#">Terms &amp; Conditions</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li>&copy; 2023 Millennium Inc.</li>
+        </ul>
+      </section>
+    </footer>
+    <hr>
 
 
 
