--- a/test.html
+++ b/test.html
@@ -19,75 +19,45 @@
 
 <!-- above shrink-to-fit=no is specifc for Safari ... will not use irt myself-->
 
+
+
+
+
+
+
 <!-- this is my custom css link -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
-<!-- FOOTER CONTAINER 
-(started with flex box... adaptation refractoring courtesy of https://webdesign.tutsplus.com/tutorials/how-to-build-a-responsive-multi-level-sticky-footer-with-flexbox--cms-33341 -->
 
 
-<body>
+<!-- footer - with flex -->
 
-    <hr>
-    <body>
-    <div class="container"></div>
-    <footer>
-      <!-- main footer -->
-      <section class="ft-main">
-        <div class="ft-main-item">
-          <h2 class="ft-title">About</h2>
-          <ul>
-            <li><a href="#">Story</a></li>
-            <li><a href="#">Shipping</a></li>
-            <li><a href="#">Pricing</a></li>
-          </ul>
-        </div>
-        <div class="ft-main-item">
-          <h2 class="ft-title">Featured On</h2>
-          <ul>
-            <li><a href="#">Cosmopolitan</a></li>
-            <li><a href="#">Science Edu</a></li>
-          </ul>
-        </div>
-        <div class="ft-main-item">
-          <h2 class="ft-title">Contact</h2>
-          <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Direct</a></li>
-          </ul>
-        </div>
-         <div class="ft-main-item">
-          <h2 class="ft-title">Resources</h2>
-          <h4>Subscribe for further tips to get the truth anytime, anywhere</h4>
-          <form>
-            <input type="email" name="email" placeholder="Enter email address">
-            <input type="submit" value="Subscribe">
-          </form>
-        </div>
-      </section>
-    
-      <!-- Footer social -->
-      <section class="ft-social">
-        <ul class="ft-social-list">
-          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-        </ul>
-      </section>
-    
-      <!-- Footer legal -->
-      <section class="ft-legal">
-        <ul class="ft-legal-list">
-          <li><a href="#">Terms &amp; Conditions</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li>&copy; 2023 Millennium Inc.</li>
-        </ul>
-      </section>
-    </footer>
-    <hr>
+<section class="footerFlex">
+  <div class="footerNav">
+    <p class=nf>2023 Copyright <br> Millennium  Inc.<br> Products for Peronsal Power</p> 
+  </div>
+  <div class="footerNav">
+    <p class=nf><a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/">As Featured On</a></p>
+    <a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/"><img src="images/cosmopolitan-logo.jpg" alt="Cosmopolitan" class="responsive"/></a>
+  </div>
+  <div class="footerNav">
+    <p class=nf><a href="">About Us</a></p>
+  </div>
+   <div class="footerNav">
+     <p class=nf><a href="mailto:info@millenniumppp.com">Contact</a></p>
+  </div>
+</section>
 
-    <!-- ATACH THIS CSS WHEN REFRACTORIMG-->
+
+
+
+
+
+
+
+ 
+
+
 
 
 
