--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <!-- class project via bootsrap versus ealier version like Rover -->  
-  <title>v12. Truth Teller Anwsers All Your Questions... Truthfully</title>
+  <title>v13. Truth Teller Anwsers All Your Questions... Truthfully</title>
 </head>
 
 
@@ -262,12 +262,24 @@
 <!-- SIMPLE FOOTER -->
 <!-- to be refractored - see working notes files for complex footer -->)
 
-<div>
-.simple {
-   Flex-direction: row
-}
+<!-- footer - with flex -->
 
-</div>
+<section class="footerFlex">
+  <div class="footerNav">
+    <p class=nf>2023 Copyright <br> Millennium  Inc.<br> Products for Peronsal Power</p> 
+  </div>
+  <div class="footerNav">
+    <p class=nf><a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/">As Featured On</a></p>
+    <a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/"><img src="images/cosmopolitan-logo.jpg" alt="Cosmopolitan" class="responsive"/></a>
+  </div>
+  <div class="footerNav">
+    <p class=nf><a href="">About Us</a></p>
+  </div>
+   <div class="footerNav">
+     <p class=nf><a href="mailto:info@millenniumppp.com">Contact</a></p>
+  </div>
+</section>
+
 
 
 
