--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <!-- class project via bootsrap versus ealier version like Rover -->  
-  <title>v13. Truth Teller Anwsers All Your Questions... Truthfully</title>
+  <title>v14 Truth Teller Anwsers All Your Questions... Truthfully</title>
 </head>
 
 
