--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
     <hr>
 
 <!-- SIMPLE FOOTER -->
-<!-- to be refractored - see working notes files for complex footer -->)
+<!-- to be refactored - see working notes files for complex footer -->
 
 <!-- footer - with flex -->
 
 <section class="footerFlex">
   <div class="footerNav">
-    <p class=nf>2023 Copyright <br> Millennium  Inc.<br> Products for Peronsal Power</p> 
+    <p class=nf>© 2023 Millennium Inc.</p> 
   </div>
   <div class="footerNav">
     <p class=nf><a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/">As Featured On</a></p>
